Set background color on canvas element, z-index bug

--- a/src/templates/event-landing/assets/stylesheets/sections/_hero.scss
+++ b/src/templates/event-landing/assets/stylesheets/sections/_hero.scss
@@ -25,4 +25,5 @@
   position:absolute;
   top: 0;
   left: 0;
+  background-color: $color-rh-purple;
 }
